name:                optparse-selective
version:             0.0.1
license:             BSD3
license-file:        LICENSE
author:              Paolo Capriotti
maintainer:          p.capriotti@gmail.com
copyright:           (c) 2012  Paolo Capriotti <p.capriotti@gmail.com>
category:            System
build-type:          Simple
cabal-version:       >= 1.8

library
  exposed-modules:      Options.Applicative
                      , Options.Applicative.Builder
                      , Options.Applicative.Builder.Types
                      , Options.Applicative.Extra
                      , Options.Applicative.Help
                      , Options.Applicative.Types
                      , Options.Applicative.Utils
  build-depends:        base >= 4          && < 5
                      , generic-lens
                      , lens
