cabal-version:  2.2

name:                 optparse-selective
version:              0.0.1
license:              BSD-3-Clause
license-file:         LICENSE
author:               Paolo Capriotti
maintainer:           p.capriotti@gmail.com
copyright:            (c) 2012  Paolo Capriotti <p.capriotti@gmail.com>
                      (c) 2019  John Ky <newhoggy@gmail.com>
                      (c) 2019  David Turnbull <dturnbull@netscout.com>
category:             System
build-type:           Simple

common base                     { build-depends: base                     >= 4          && < 5      }

common generic-lens             { build-depends: generic-lens             >= 1.2        && < 2.1    }
common hedgehog                 { build-depends: hedgehog                 >= 0.6        && < 1.1    }
common hspec                    { build-depends: hspec                    >= 2.4        && < 3      }
common hw-hspec-hedgehog        { build-depends: hw-hspec-hedgehog        >= 0.1.0.4    && < 0.2    }
common lens                     { build-depends: lens                     >= 4          && < 5      }

common config
  default-language:   Haskell2010

library
  import:   base, config
          , generic-lens
          , lens
  exposed-modules:      Options.Applicative
                      , Options.Applicative.Builder
                      , Options.Applicative.Builder.Types
                      , Options.Applicative.Extra
                      , Options.Applicative.Help
                      , Options.Applicative.Types
                      , Options.Applicative.Utils

test-suite optparse-selective-test
  import:   base, config
          , hedgehog
          , hspec
          , hw-hspec-hedgehog
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:      optparse-selective
  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-tools:        hspec-discover
  other-modules:
      Options.ApplicativeSpec
